--- a/style.css
+++ b/style.css
@@ -184,8 +184,8 @@ a.nav-link{
 
 .work{
 	display: flex; 
-	flex: 1;
-    flex-wrap: wrap;
+	/* flex: 1;
+    flex-wrap: wrap;*/
     justify-content:center;
 	align-items: center;
 	padding: 20px;
